package je.applicatie.domain.soexintegratie.Domain;

import java.util.Map;

public interface Bouwsteen {
    void setDetails(Map<String, String> details);
    String getType();
    String getDetails();
}
